--- a/package.json
+++ b/package.json
@@ -14,29 +14,31 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^5.1.1",
-    "@prisma/client": "^6.11.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "next": "15.3.5",
-    "prisma": "^6.11.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.60.0",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.5"
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^5.3.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "next": "13.5.4",
+    "prisma": "^5.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "tailwind-merge": "^1.14.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.5",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^20.8.2",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "13.5.4",
+    "postcss": "^8.5.6",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.2.2"
   }
 }
